--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </head>
 <body>
 
-  <audio id="bg-music" src="music/contigo.mp3"></audio>
+  <audio id="bg-music" src="music/Contigo.mp3"></audio>
 
   <div class="main-container" id="main-content">
     <h1>¿Quieres volver con Migo? 🥹</h1>
